--- a/Assets/style.css
+++ b/Assets/style.css
@@ -131,6 +131,10 @@ body {
   border-color:  rgb(104,54,54);
     }
 
+.linkedIn {
+  padding-left: 3%;
+}
+
 .label {
   font-weight: bold;
 }
@@ -142,8 +146,7 @@ h4 {
 
 .box-4{
   box-sizing: content-box;
-  flex: 1;
-  order: 1;
+  flex-wrap: wrap;
   width: 100%;
   height: 20%;
   border-radius: 14px;
@@ -152,11 +155,11 @@ h4 {
   border-color:  rgb(104,54,54);
   }
 
-  ol { 
+
+  .child-1 { 
       float: right;
       padding-right: 25%;
-      margin: 0;
-        }
+         }
     
 .box-5{
   flex: 1;
